--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -10,13 +10,10 @@ permissions:
 env:
   DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
   
-# 실행 기록 보존 기간 설정 (일 단위)
-retention-days: 7
-
 jobs:
   run-alert:
     runs-on: ubuntu-latest
-
+    retention-days: 7 # 실행 기록 보존 기간 설정 (일 단위)
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
